Compile sources before launching GUI